nav alignment fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -721,6 +721,20 @@ header {
     }
 }
 
+/* ===============================
+   7. RESPONSIVE
+   =============================== */
+
+@media (max-width: 768px) {
+
+    header.bk-header nav {
+        background-color: #2e2e2e;
+        min-height: 80px;
+    }
+    .widget.extendednavigation ul {
+        padding-top:40px;
+    }
+}
 
 /* ===============================
    IPHONE WIDTH
